# research-scrapers

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_SUMMARY.md  AUTHENTICATION_CONFIG_FIXES.md  CHANGELOG.md  ENHANCEMENT_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  LOGGING_FEATURES_ANNOUNCEMENT.md  LOGGING_IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  ROADMAP.md  arxiv_scraper.py  config.py  github_issue_scraper.py  github_repo_scraper.py  github_user_scraper.py  patent_scraper.py  pyproject.toml  pytest.ini  requirements-linear.txt  requirements-web-scraper.txt  requirements.txt  setup.py  setup_web_scraper.py  stackoverflow_scraper.py  utils.py
.github/: SECURITY_CHECKLIST.md  dependabot.yml
.github/workflows/: README.md  codeql-analysis.yml  github-api-scraper-production.yml  linear-webhook-trigger.yml  research-scraper-scheduled.yml
docs/: API_ARCHITECTURE.md  ARXIV_SCRAPER_GUIDE.md  BATCH_PROCESSING.md  INTEGRATION_GUIDE.md  LINEAR_INTEGRATION.md  LOGGING_GUIDE.md  MEMORY_MANAGEMENT.md  PATENT_SCRAPER_GUIDE.md  PATENT_SCRAPER_README.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SECURITY_ARCHITECTURE.md  STACKOVERFLOW_SCRAPER.md  WORKFLOW_QUICK_REFERENCE.md  WORKFLOW_SETUP_GUIDE.md  configuration.md  contributing.md  getting-started.md
docs/web_scraper/: ARCHITECTURE.md  README.md
examples/: LINEAR_EXAMPLES_README.md  arxiv_examples.py  batch_processing_example.py  linear_integration_examples.py  memory_efficient_scraping.py  patent_scraper_examples.py  stackoverflow_example.py  stackoverflow_logging_demo.py
examples/web_scraper_configs/: article_scraper.yaml  authenticated_scraper.yaml  documentation_scraper.yaml  spa_scraper.yaml  targeted_extraction.yaml
examples/web_scraper_usage/: advanced_scraping.py  basic_scraping.py  real_world_examples.py
scripts/: example_basic_scraping.py  example_batch_scraping.py  example_github_scraper.py  example_selenium_scraping.py  post_linear_status.py  setup.py  trigger_workflow.py  update_linear_task.py
src/research_scrapers/: __init__.py  batch_processor.py  circuit_breaker.py  config.py  github_scraper.py  memory_manager.py  patent_scraper.py  scraper.py  stackoverflow_scraper.py  structured_logging.py  utils.py
src/research_scrapers/integrations/: __init__.py  linear_export.py  linear_github.py
src/research_scrapers/linear/: INTEGRATION_GUIDE.md  README.md  __init__.py  client.py  formatters.py  models.py
src/research_scrapers/web_scraper/: README.md  __init__.py  auth_manager.py  cli.py  config.py  content_extractor.py  pagination_handler.py  rate_limiter.py  robots_handler.py  scraper.py
tests/: __init__.py  test_batch_processor.py  test_circuit_breaker.py  test_config.py  test_github_scraper.py  test_memory_manager.py  test_scraper.py  test_stackoverflow_logging.py  test_structured_logging.py  test_utils.py
tests/web_scraper/: test_config.py  test_content_extractor.py  test_rate_limiter.py  test_scraper.py
