[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-scrapers"
version = "0.1.0"
authors = [
    {name = "Stephen Thompson", email = "your.email@example.com"},
]
description = "A comprehensive toolkit for scraping and analyzing data from various research sources"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["web scraping", "research", "data collection", "automation"]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "requests-mock>=1.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "isort>=5.12.0",
]
selenium = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]
async = [
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
all = [
    "research-scrapers[dev,selenium,async,database]",
]

[project.urls]
"Homepage" = "https://github.com/CrazyDubya/research-scrapers"
"Bug Reports" = "https://github.com/CrazyDubya/research-scrapers/issues"
"Source" = "https://github.com/CrazyDubya/research-scrapers"
"Documentation" = "https://github.com/CrazyDubya/research-scrapers/tree/main/docs"

[project.scripts]
research-scraper = "research_scrapers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "selenium: marks tests that require Selenium",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
